# bitcoin-old

./: .gitignore  .mcp.json  ARCHITECTURE.md  BLOCKCHAIN_PRICE_AUDIT.md  CLAUDE.md  COMPOUNDING_FORMULAS_LATEX.md  COMPOUNDING_MATH_FRAMEWORK.txt  COMPOUNDING_RESEARCH_INDEX.md  EXECUTIVE_SUMMARY.md  FORMULAS.md  FORMULAS_ACADEMIC.md  FORMULA_IDS.txt  FREE_USA_WEBSOCKET.py  GEMINI_HANDOFF_PROMPT.md  INTEGRATION_PLAN.md  LEVEL3_INSTITUTIONAL.py  MAXIMUM_SPEED_SYSTEM.py  NANOSECOND_OPTIMIZATION_COMPLETE_RESEARCH.md  ONCHAIN_TRADING_PLAN.md  README.md  RENAISSANCE_MATH_FRAMEWORK.md  RENAISSANCE_SCALE_PLAN.md  RESEARCH_PROMPT.md  SCENARIO_COMPARISON.txt  STATUS.md  THE_NUMBERS.txt  __init__.py  backtest_v25.py  blockchain_market_data_usd.py  coinapi_feed.py  database.db-shm  database.db-wal  engine_hft.py  engine_volume_capture.py  entry_system_visual.html  forward_to_user.sh  get_volume_stats.py  hft_mega_system.py  institutional_feed.py  market_data_pro.py  (+28 more)
.claude/: settings.json  settings.md
bitcoin/: FINDINGS.md  README.md  __init__.py  bitcoin_sync.tar  config.py  price_feed.py  run.py  signals.py  strategies.tar  trader.py  unified_tracker.py
bitcoin/cpp/: CMakeLists.txt  build.sh
bitcoin/cpp/include/: hqt_arbitrage.hpp  sct_wilson.hpp
bitcoin/cpp/python/: __init__.py  hqt_bridge.py  hqt_live.py  sct_bridge.py  sct_live.py
bitcoin/cpp/src/: hqt_arbitrage.cpp  sct_wilson.cpp
blockchain/: __init__.py  blockchain_feed.py  blockchain_market_data.py  blockchain_mathematical_price.py  blockchain_price_engine.py  blockchain_trading_signal.py  blockchain_true_price.py  complete_blockchain_price.py  first_principles_price.py  halving_signals.py  live_true_price.py  mathematical_price.py  mempool_math.py  node_data_feed.py  pipeline.py  price_calibration.py  price_generator.py  price_sensitivity.py  price_variance_analysis.py  pure_blockchain_price.py  pure_blockchain_value.py  pure_simulation.py  real_price_feed.py  unified_feed.py
core/: __init__.py  bitcoin_zmq.py  exchange_feed.py  hft_optimizer.py  order_book.py  unified_feed.py
data/: README.md  __init__.py  bidirectional_results.json  blockchain_scalping_results.json  btc_history.py  btc_history_ultra.py  btc_hourly_90d.json  comprehensive_results.json  correlation.db  correlation_results.db  exchange_flows_2022_2025.db  exhaustive_results.json  historical_flows.db  manifest.json  memory.db  monitor.bat  pipeline.py  pipeline_fast.py  rentech_pattern_results.json  rentech_results.json  scalping_backtest_results.json  simulation_trades.db  trades.db  turbo_download.ps1  volume_aggregator.py
docs/: ARCHITECTURE.md  BLOCKCHAIN_PIPELINE_ARCHITECTURE.md  FIXES_IMPLEMENTED.md  FORMULA_REGISTRY.md  MISSING_PIPELINE_CONNECTIONS.md  MODULARIZATION_PLAN.md  PURE_BLOCKCHAIN_SIMULATION_PLAN.md  RENAISSANCE_DATA_PLAN.md
edge-research/: 00_INDEX.md  00_METHODOLOGY.md  01_EDGE_MATHEMATICS.md  01_SOURCES_CONSULTED.md  02_FEE_ANALYSIS.md  02_FORMULAS_EXTRACTED.md  03_FREQUENCY_OPTIMIZATION.md  04_WIN_RATE_ANALYSIS.md  05_IMPLEMENTATION_ORDER.md  05_VPIN_CALIBRATION.md  06_RENAISSANCE_METHODS.md  07_POSITIVE_EDGE_CONVERSION.md  08_KELLY_APPLICATION.md  09_HOLD_TIME_OPTIMIZATION.md  10_ACTION_PLAN.md  14_EXPECTED_RESULTS.md  README.md
engine/: README.md  __init__.py  base.py  config.py  correlation_formula.py  cpp_master_pipeline.py  deterministic_trader.py  multi_price_feed.py  runner.py
engine/archive/sovereign/cpp_runner/: CMakeLists.txt  build.sh  deploy.sh  deterministic_bridge.py  exchange_flow_tracker.py  signal_bridge.py
engine/archive/sovereign/cpp_runner/include/: address_database.hpp  flow_detector.hpp  mmap_addresses.hpp  tx_decoder.hpp  utxo_cache.hpp
engine/archive/sovereign/cpp_runner/src/: address_compiler.cpp  address_database.cpp  flow_detector.cpp  main.cpp  tx_decoder.cpp  utxo_cache.cpp
engine/archive/sovereign/rust_runner/: Cargo.toml  build.sh  deploy.sh  signal_bridge.py
engine/archive/sovereign/rust_runner/src/: main.rs
formulas/: __init__.py  __init__server.py  (+34 more)
(+630 files in other folders)
